--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>蔓延防止等重点措置(4/19)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {padding: 0; margin: 0}
       html, body, #map {height: 100%; width: 100%;}
